--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
 	"Droplink",
 	"Dulink",
 	"Tnlink",
-	"pdisklinkshortener"
+	"lincopro.in"
     ],
     "website": "https://github.com/AkBotZ/Link-Shortener-Bot",
     "repository": "https://github.com/AkBotZ/Link-Shortener-Bot",
